fix: minor fix changes

--- a/frontend/src/app/features/admin/admin-amenities-page/admin-amenities-page.component.html
+++ b/frontend/src/app/features/admin/admin-amenities-page/admin-amenities-page.component.html
@@ -1,8 +1,4 @@
-<div
-  class="cool-static-container m-b-20"
-  style="word-wrap: break-word"
-  aria-hidden="true"
->
+<div class="cool-static-container m-b-20" style="word-wrap: break-word">
   <div class="f-r-sb-c">
     <h2 class="mb-0">{{ 'ADMIN-AMENITIES-PAGE.AMENITIES' | translate }}</h2>
     <a
