--- a/frontend/src/app/features/service-providers/service-providers-detail-page/service-providers-detail-page.component.html
+++ b/frontend/src/app/features/service-providers/service-providers-detail-page/service-providers-detail-page.component.html
@@ -12,6 +12,7 @@
 
   <app-service-providers-reviews-and-posts
     class="w-100"
+    [worker]="worker"
     (openReviewDialog)="openReviewDialog()"
   >
   </app-service-providers-reviews-and-posts>
