--- a/frontend/src/app/shared/components/placeholder-product/placeholder-product.component.html
+++ b/frontend/src/app/shared/components/placeholder-product/placeholder-product.component.html
@@ -2,4 +2,5 @@
   <div class="placeholder-image"></div>
   <div class="placeholder-title"></div>
   <div class="placeholder-description"></div>
+  <div class="placeholder-title mt-4"></div>
 </div>
