--- a/frontend/src/app/shared/components/placeholder-product/placeholder-product.component.css
+++ b/frontend/src/app/shared/components/placeholder-product/placeholder-product.component.css
@@ -2,7 +2,6 @@
   background: var(--on-onbackground);
   border-radius: var(--border-radius);
   margin-bottom: 20px;
-  padding: 16px;
   display: flex;
   flex-direction: column;
   gap: 8px;
@@ -12,22 +11,24 @@
   .placeholder-description {
     border-radius: 4px;
     animation: pulse 1.5s infinite ease-in-out;
-    background-color: var(
-      --on-onbackground
-    ); /* Or var(--darkonbackground) if you like */
+    background-color: var(--on-onbackground);
   }
 
   .placeholder-image {
+    margin-bottom: 1em;
     width: 100%;
-    height: 120px;
+    height: 10rem;
   }
 
   .placeholder-title {
+    margin-left: 1em;
     width: 60%;
     height: 16px;
   }
 
   .placeholder-description {
+    margin-left: 1em;
+
     width: 80%;
     height: 12px;
   }
